# example

./: .pre-commit-config.yaml  pyproject.toml
